syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package proto;

message SetReq {
	string key = 1;
	string value = 2;
}

message SetReply {
	int32 status = 1;
}

service TestPegasus {
	rpc TestSet(SetReq) returns (SetReply) {}
}

